[package]
name = "doubletake"
version = "0.0.0-alpha.3"
license = "CC0-1.0"
edition = "2021"
authors = [ "Steven Roose <steven@roose.io>", "James Dorfman" ]
description = "A library and CLI tool for creating Bitcoin double spend prevention bonds on Liquid"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = ["dep:serde", "bitcoin/serde", "elements/serde"]
wasm = ["wasm-bindgen", "serde", "serde_json", "serde-wasm-bindgen", "getrandom/js"]

[dependencies]
base64 = "0.13.0"
bitcoin = "0.30.1"
elements = "0.23.0"
getrandom = "0.2"
hex-conservative = "0.1.1"

serde = { version = "1.0", features = [ "derive" ], optional = true }
serde_json = { version = "1.0.104", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
