[package]
name = "doubletake"
version = "0.0.0-alpha.4"
license = "CC0-1.0"
edition = "2021"
authors = [ "Steven Roose <steven@roose.io>", "James Dorfman" ]
description = "A library and CLI tool for creating Bitcoin double spend prevention bonds on Liquid"
repository = "https://github.com/stevenroose/doubletake"


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "doubletake"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
serde = ["dep:serde", "bitcoin/serde", "elements/serde"]
cli = ["clap", "serde", "serde_json"]
wasm = ["wasm-bindgen", "serde", "serde_json", "serde-wasm-bindgen", "getrandom/js"]

[dependencies]
base64 = "0.13.0"
bitcoin = "0.30.1"
elements = "0.23.0"
getrandom = "0.2"
hex-conservative = "0.1.1"

serde = { version = "1.0", features = [ "derive" ], optional = true }
serde_json = { version = "1.0", optional = true }

# binary
clap = { version = "4", features = [ "derive" ], optional = true }

# wasm
wasm-bindgen = { version = "0.2.87", optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
