[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doubletake = { path = "../" }

bitcoin = { version = "0.30.1", features = [ "serde" ] }
elements = { version = "0.23.0", features = [ "serde" ] }
hex-conservative = "0.1.1"
jsonrpc = "0.16.0"
lazy_static = "1.4.0"

# for libelementsconsensus testing
elements-consensus = { git = "https://github.com/stevenroose/rust-elements-consensus.git", rev = "b9898ce107c30f7253828dfa5ffcc1de37a8fa63" }
link-cplusplus = "1"
